--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       homescreen on Android. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <!-- <link href="https://cdn.bootcss.com/modern-normalize/0.5.0/modern-normalize.min.css" rel="stylesheet"> -->
+    <link href="https://cdn.bootcss.com/modern-normalize/0.5.0/modern-normalize.min.css" rel="stylesheet">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -37,7 +37,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <!-- <script src="https://cdn.bootcss.com/react/16.6.3/umd/react.production.min.js"></script> -->
-    <!-- <script src="https://cdn.bootcss.com/react-dom/16.6.3/umd/react-dom.production.min.js"></script> -->
+    <script src="https://cdn.bootcss.com/react/16.6.3/umd/react.production.min.js"></script>
+    <script src="https://cdn.bootcss.com/react-dom/16.6.3/umd/react-dom.production.min.js"></script>
   </body>
 </html>
