--- a/public/index.html
+++ b/public/index.html
@@ -37,10 +37,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script src="https://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
-    <script>
-      new VConsole()
-    </script>
+    <script src="//cdn.bootcss.com/eruda/1.5.2/eruda.min.js"></script>
+    <script>eruda.init();</script>
     <script src="https://cdn.bootcss.com/react/16.6.3/umd/react.production.min.js"></script>
     <script src="https://cdn.bootcss.com/react-dom/16.6.3/umd/react-dom.production.min.js"></script>
   </body>
