优化积分转赠操作源显示，调整客服入口

--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
             s.parentNode.insertBefore(j, s);
         })(window, document, 'script', '_MEIQIA');
         _MEIQIA('entId', 150645);
+        _MEIQIA('withoutBtn');
     </script>    
   </body>
 </html>
